- start updating to 5.2.2
Changed files:
    apache.conf -> 1.2
    bacula-web.spec -> 1.9

--- a/apache.conf
+++ b/apache.conf
@@ -1,4 +1,9 @@
 Alias /bacula-web /usr/share/bacula-web
 <Directory /usr/share/bacula-web>
-	Allow from all
+	allow from all
+</Directory>
+
+<Directory /usr/share/bacula-web/config>
+	order deny,allow
+	deny from all
 </Directory>
