- use external libs, add cachedir
Changed files:
    apache.conf -> 1.3
    bacula-web.spec -> 1.10
    sys-libs.patch -> 1.1

--- a/apache.conf
+++ b/apache.conf
@@ -1,6 +1,14 @@
+Alias /bacula-web/templates_c/ /var/cache/bacula-web/
 Alias /bacula-web /usr/share/bacula-web
 <Directory /usr/share/bacula-web>
 	allow from all
+</Directory>
+
+<Directory /var/cache/bacula-web>
+	deny from all
+	<Files *.png>
+		allow from all
+	</Files>
 </Directory>
 
 <Directory /usr/share/bacula-web/config>
