--- a/apache.conf
+++ b/apache.conf
@@ -1,4 +1,4 @@
-Alias /bacula-web/templates_c/ /var/cache/bacula-web/
+Alias /bacula-web/cache/ /var/cache/bacula-web/
 Alias /bacula-web /usr/share/bacula-web
 <Directory /usr/share/bacula-web>
 	allow from all
@@ -9,9 +9,4 @@ Alias /bacula-web /usr/share/bacula-web
 	<Files *.png>
 		allow from all
 	</Files>
-</Directory>
-
-<Directory /usr/share/bacula-web/config>
-	order deny,allow
-	deny from all
 </Directory>
