apache multiversion config

--- a/apache.conf
+++ b/apache.conf
@@ -1,12 +1,31 @@
 Alias /bacula-web/cache/ /var/cache/bacula-web/
 Alias /bacula-web /usr/share/bacula-web
+
 <Directory /usr/share/bacula-web>
-	allow from all
+	# Apache < 2.4
+	<IfModule !mod_authz_core.c>
+		Order allow,deny
+		Allow from all
+	</IfModule>
+	# Apache 2.4
+	<IfModule mod_authz_core.c>
+		Require all granted
+	</IfModule>
 </Directory>
 
 <Directory /var/cache/bacula-web>
-	deny from all
-	<Files *.png>
-		allow from all
-	</Files>
+	# Apache < 2.4
+	<IfModule !mod_authz_core.c>
+		Deny from all
+		<Files *.png>
+			Allow from all
+		</Files>
+	</IfModule>
+	# Apache 2.4
+	<IfModule mod_authz_core.c>
+		Require all denied
+		<Files *.png>
+			Require all granted
+		</Files>
+	</IfModule>
 </Directory>
